--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
+      <!--compressed profilepic.jpg to profilepic.png -->
+      <a href="/"><img src="img/profilepic.png"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
@@ -57,7 +58,8 @@
           </li>
 
           <li>
-            <img style="width: 100px;" src="views/images/pizzeria.jpg">
+            <!-- compressed pizzeria.jpg and resized to 100 x 75px -->
+            <img style="width: 100px;" src="views/images/pizzeria.png">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
